# FDTD

./: .gitignore  CMakeLists.txt  build.sh  fdtd.h  fdtd1.cu  fdtd2.cu  fdtd3.cu  fdtd4.cu  fdtd5.cu  fdtd6.cu  fdtd7.cu  fdtd8.cu  fdtdspc.cu  jacobi.cu  main.cu  run.sh  stencil.h
